2005-10-11  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo_glyph.c:
	  - Use Cairo::Glyph#initialize instead of Gairo::Glyph.new.
	  - Added Cairo::Glyph#to_s.

	* packages/cairo/ext/rb_cairo_font_extents.c:
	  - Removed Cairo::FontExtents.new.
	  - Added Cairo::FontExtents#to_s.

	* packages/cairo/ext/rb_cairo_text_extents.c:
	  - Removed Cairo::TextExtents.new.
	  - Added Cairo::TextExtents#to_s.

2005-10-10  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo_constants.c: Supported all constants.

	* packages/cairo/ext/rb_cairo_matrix.c: Added a utility method.

	* packages/cairo/lib/cairo.rb: Remove deprecated API.
	
	* packages/cairo/ext/rb_cairo_matrix.c: Tidied cairo_matrix_t.
	* packages/cairo/lib/cairo.rb: ditto.

2005-10-09  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo_context.c,
	  packages/cairo/ext/rb_cairo_matrix.c: Moved duplicated
	  functions to ...
	* packages/cairo/ext/rb_cairo_private.h: ... here.
	* packages/cairo/ext/rb_cairo_private.c: ditto.

	* packages/cairo/ext/rb_cairo_scaled_font.c: Implemented
	  cairo_scaled_font_t.
	* packages/cairo/ext/cairo.def: ditto.
	* packages/cairo/ext/rb_cairo.c: ditto.
	* packages/cairo/ext/rb_cairo.h: ditto.

	* packages/cairo/lib/cairo.rb: Removed deprecated wrapper API.

	* packages/cairo/ext/rb_cairo_surface.c:
	  - Implemented File I/O API by Ruby.
	  - SurfaceXXX -> XXXSurface.

	* packages/cairo/ext/rb_cairo_exception.c: Tidied exceptions.
	* packages/cairo/ext/cairo.def: ditto.
	* packages/cairo/ext/rb_cairo.h: ditto.
	* packages/cairo/ext/rb_cairo_context.c: ditto.
	* packages/cairo/ext/rb_cairo_font_options.c: ditto.
	* packages/cairo/ext/rb_cairo_matrix.c: ditto.
	* packages/cairo/ext/rb_cairo_pattern.c: ditto.
	* packages/cairo/ext/rb_cairo_surface.c: ditto.

	* packages/cairo/ext/rb_cairo_pattern.c: Implemented
	  cairo_pattern_t.
	* packages/cairo/ext/rb_cairo.c: ditto.
	* packages/cairo/ext/rb_cairo.h: ditto.