@@ -1,7 +1,13 @@
 2005-10-11  Kouhei Sutou  <kou@cozmixng.org>
 
+	* packages/cairo/ext/rb_cairo_private.c: Changed prefix to
+	  'rb_cairo__' from 'cr__'.
+	* packages/cairo/ext/rb_cairo_matrix.c: ditto.
+	* packages/cairo/ext/rb_cairo_context.c: ditto.
+	* packages/cairo/ext/rb_cairo_private.h: ditto.
+
 	* packages/cairo/ext/rb_cairo_glyph.c:
-	  - Use Cairo::Glyph#initialize instead of Gairo::Glyph.new.
+	  - Use Cairo::Glyph#initialize instead of Cairo::Glyph.new.
 	  - Added Cairo::Glyph#to_s.
 
 	* packages/cairo/ext/rb_cairo_font_extents.c:
